# auratpu

./: .gitignore  demo_consciousness_llm.py  demo_enhanced_consciousness_llm.py  main.py  pyproject.toml  run.sh
src/: aura_memory_ingest.py  aura_mini_train_tpu.py  clean_dedup_pack.py  demo.txt  events_keywords_fixed.json  fast_clean_pack.py  memory_store.py  neuromorphic_srwkv_jax.py  neuromorphic_srwkv_tpu (1).py  neuromorphic_srwkv_tpu.py  oja_sanger_whitener.py  pack_to_bin.py  snn_llm_pretrainer_tpu.py  test_neuromorphic_srwkv_tpu.py  test_streaming_softmax_equivalence.py
src/experiments/: addition_only_classifier_jax.py  addition_only_classifier_torch.py  aura_mini_train_jax.py  aura_mini_train_tpu_small.py  fast_event_encoder.py  fast_event_encoder_jax.py  llm_phasic.py  (+5 more)
tests/: test_addition_only_classifier.py  test_aura_consciousness_system.py  test_aura_mini_train_tpu.py  test_aura_mini_train_tpu_small.py  test_clean_dedup_pack.py  test_dream_synthesizer.py  test_empirical_validation.py  test_fast_clean_pack.py  test_fast_event_encoder.py  test_generation_loop.py  test_global_workspace_manager.py  test_jax_modules.py  test_memory_processor.py  test_memory_store.py  test_metacognitive_monitor.py  test_neuromorphic_srwkv_tpu_unittest.py  test_oja_sanger_whitener.py  test_pack_to_bin.py  test_self_teaching_adapter.py  test_shadowbank_compass.py  test_snn_llm_pretrainer_tpu.py  test_spiking_language_core.py  test_spiking_retrieval_core.py  test_temporal_memory_interpolation.py  test_theta_gamma_oscillator.py  test_token_decoder.py  test_tpu_training_pipeline.py
(+13 files in other folders)
